fixed so that doted menu is aligned

--- a/styles/_navbar.scss
+++ b/styles/_navbar.scss
@@ -141,6 +141,7 @@ header {
     .nav-dots {
         display: inline-block;
         justify-self: flex-end;
+        align-items: center;
         font-size: 24px;
         cursor: pointer;
         color: white;
